[project]
authors = [{ name = "bash000000", email = "m2588953@outlook.com" }]
name = "langchain-multimedia"
requires-python = ">= 3.12"
version = "0.1.3"
dependencies = [
    "langchain-core"
]

[project.optional-dependencies]

openai = [
    "langchain-openai",
]

[build-system]
build-backend = "uv_build"
requires = ["uv"]

[tool.uv.build-backend]
module-root = ""
source-include = [
    "**/*.py",
]
source-exclude = [
    '**/tests/**',
    '**/test/**',
    '**/tests/',
    '**/test/',
]
