[project]
authors = [{ name = "bash000000", email = "m2588953@outlook.com" }]
name = "langchain-multimedia"
requires-python = ">= 3.12"
version = "0.1.5"
dependencies = [
    "langchain-core",
    "python-magic"
]

[project.optional-dependencies]

openai = [
    "langchain-openai",
]

test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-langchain",
    "httpx",
    "langchain-core",
    "langchain-openai",
]
[build-system]
build-backend = "uv_build"
requires = ["uv-build"]

[tool.uv.build-backend]
module-root = ""
source-include = [
    "**/*.py",
]
source-exclude = [
    '**/tests/**',
    '**/test/**',
    '**/tests/',
    '**/test/',
]
